@@ -1,0 +1,134 @@
+<search function="jsref">
+  <name>Javascript reference</name>
+  <description>Search references of various flavors of Javascript. Uses Google.
+    <div class="helpboxDescLabels">Usage:</div>
+    <table class="helpboxDescTable">
+      <tr><td>jsref &lt;<i>item</i>&gt; [/version] [/unlucky]</td></tr>
+    </table>
+    <div class="helpboxDescLabels">Switches:</div>
+      <table class="helpboxDescTable">
+        <tr><td>/<i>version</i></td><td> - </td><td>
+          One of the following versions:<br/>
+          <table class="helpboxDescTable">
+            <tr><td>/1.3</td><td> - </td><td>1.3 Netscape version</td></tr>
+            <tr><td>/1.4</td><td> - </td><td>1.4 Netscape version</td></tr>
+            <tr><td>/1.5</td><td> - </td><td>1.5 Netscape version</td></tr>
+            <tr><td>/5.6</td><td> - </td><td>5.6 Microsoft version (default)</td></tr>
+            <tr><td>/7</td><td> - </td><td>.NET Microsoft version</td></tr>
+          </table></td></tr>
+        <tr><td>/unlucky</td><td> - </td><td>Try this if you feel unlucky :(</td></tr>
+        
+      </table>
+    <div class="helpboxDescLabels">Example:</div>
+    <table class="helpboxDescTable">
+      <tr><td>jsref split</td></tr>
+      <tr><td>jsref split /1.5</td></tr>
+      <tr><td>jsref split /7</td></tr>
+      <tr><td>jsref abstract /7</td></tr>
+    </table>
+  </description>
+  <link>http://developer.netscape.com/docs/manuals/javascript.html</link>
+  <category>Computers</category>
+  <contributor>MLL, from jdk.xml</contributor>
+  
+  <form name="jsreff" action="http://www.google.com/search" method="get">
+    <input type="hidden" name="q"/>
+    <input type="hidden" name="meta" value=""/>
+    <input type="hidden" name="btnI" value="I'm Feeling Lucky"/>
+  </form>
+ 
+ <form name="jsreff_ul" action="http://www.google.com/search" method="get">
+    <input type="hidden" name="q"/>
+    <input type="hidden" name="meta" value=""/>
+  </form>
+
+  <script><![CDATA[
+    // Uses Google I'm feeling lucky search
+    function jsref(q)
+    {
+      var defpage = 'http://msdn.microsoft.com/library/en-us/script56/html/js56jslrfjscriptlanguagereference.asp';
+      if (q == "")
+        openSearchWindow(defpage);
+      else
+      {
+        var args = parseArgs(q, "1.5, 1.4, 1.3, 5.6, 7, unlucky");
+        if( args.q == "?" ) return nullArgs( "jsref", "?" );
+
+        var myform = document.jsreff;
+
+        /*
+        we somehow shoot in the dark here. putting args.q in a inurl operator would be much better,
+        but google doesn't accept "inurl:mychars" if mychars aren't a *complete* dir/file name
+        the required words 'jscript' 'requirements' seem to bring the most appropriate URL to 1st rank
+        the query below may be fine-tuned somewhat more
+        */
+        var query = args.q + ' jscript requirements inurl:"script56" site:msdn.microsoft.com';
+
+        if (args.switches.length > 0)
+        {
+          var k=0;
+          for( var j=0; j<args.switches.length; j++ )
+          {
+            switch (args.switches[j].name)
+            {
+              case "unlucky":
+                myform = document.jsreff_ul;
+                break;
+              case "1.3":
+                defpage = 'http://developer.netscape.com/docs/manuals/js/client/jsref/index.htm';
+                query = args.q + ' inurl:jsref -inurl:ix -inurl:whatsnew site:developer.netscape.com';
+                k++;
+                break;
+              case "1.4":
+                defpage = 'http://developer.netscape.com/docs/manuals/js/core/jsref14/index.htm';
+                query = args.q + ' inurl:jsref14 -inurl:ix site:developer.netscape.com';
+                k++;
+                break;
+              case "1.5":
+                defpage = 'http://developer.netscape.com/docs/manuals/js/core/jsref15/contents.html';
+                query = args.q + ' inurl:jsref15 -inurl:ix site:developer.netscape.com';
+                k++;
+                break;
+              case "5.6":
+                //we don't change anything : default search - political choice <g>
+                k++;
+                break;
+              case "7":
+                defpage = 'http://msdn.microsoft.com/library/en-us/jscript7/html/jsoriProgrammingWithJScriptNET.asp';
+                /*
+                we somehow shoot in the dark here. putting args.q in a inurl operator would be much better,
+                but google doesn't accept "inurl:mychars" if mychars aren't a *complete* dir/file name
+                the required words 'jscript' 'requirements' seem to bring the most appropriate URL to 1st rank
+                the query below may be fine-tuned somewhat more
+                */
+                var query = args.q + ' jscript requirements inurl:"jscript7" site:msdn.microsoft.com';
+                k++;
+                break;
+              default:
+                nullArgs ( "jsref" , "?" );
+                return false;
+            } //switch
+          } //for
+          if( k > 1 )
+          {
+            nullArgs ( "jsref" , "?" );
+            return false;
+          }
+        } //if
+        if (args.q == "")
+        {
+          openSearchWindow(defpage);
+          return;
+        }
+        myform.q.value = query;
+        submitForm(myform);
+      }
+    }
+  ]]></script>
+
+  <copyright>
+	Copyright (c) 2002 David Bau
+	Distributed under the terms of the
+	GNU Public License, Version 2 (http://www.gnu.org/copyleft/gpl.txt)
+  </copyright>
+</search>
